// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderActivity() > 스냅샷과 일치한다 1`] = `
"<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
  width="800"
  height="176"
  viewBox="0 0 800 176"
  
>
<rect x="0" y="0" width="800" height="176" fill="#0a0a0a" rx="12" opacity="1" />
  
  <!-- header -->
  <rect x="0" y="0" width="800" height="48" fill="#171717" rx="0" opacity="1" />
  <text
    x="24"
    y="30"
    fill="#ededed"
    font-size="15"
    font-weight="600"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="start"
    opacity="1"
    dominant-baseline="auto"
  >📝  Recent Activity</text>
  <line x1="0" y1="48" x2="800" y2="48" stroke="#262626" stroke-width="1"/>
  
    
  <defs>
    <clipPath id="act0">
      <circle cx="40" cy="76" r="16"/>
    </clipPath>
  </defs>
  <image href="https://avatars.githubusercontent.com/u/1?v=4" x="24" y="60" width="32" height="32" clip-path="url(#act0)" preserveAspectRatio="xMidYMid slice"/>

    <!-- repo + author + time -->
    <text
    x="64"
    y="68"
    fill="#a1a1aa"
    font-size="12"
    font-weight="400"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="start"
    opacity="1"
    dominant-baseline="auto"
  >CodeAgora · alice · 30m ago</text>

    <!-- commit message -->
    <text
    x="64"
    y="86"
    fill="#ededed"
    font-size="13"
    font-weight="500"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="start"
    opacity="1"
    dominant-baseline="auto"
  >feat: add real-time collaboration</text>

    <line x1="24" y1="104" x2="776" y2="104" stroke="#262626" stroke-width="1"/>
    
  <defs>
    <clipPath id="act1">
      <circle cx="40" cy="132" r="16"/>
    </clipPath>
  </defs>
  <image href="https://avatars.githubusercontent.com/u/2?v=4" x="24" y="116" width="32" height="32" clip-path="url(#act1)" preserveAspectRatio="xMidYMid slice"/>

    <!-- repo + author + time -->
    <text
    x="64"
    y="124"
    fill="#a1a1aa"
    font-size="12"
    font-weight="400"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="start"
    opacity="1"
    dominant-baseline="auto"
  >cotor · bob · 2h ago</text>

    <!-- commit message -->
    <text
    x="64"
    y="142"
    fill="#ededed"
    font-size="13"
    font-weight="500"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="start"
    opacity="1"
    dominant-baseline="auto"
  >fix: handle empty commit messages</text>
</svg>"
`;

exports[`renderBanner() > light 스냅샷과 일치한다 1`] = `
"<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
  width="1200"
  height="300"
  viewBox="0 0 1200 300"
  
>
<rect x="0" y="0" width="1200" height="300" fill="#ffffff" rx="0" opacity="1" />

  <!-- 왼쪽 accent bar -->
  <rect x="48" y="64" width="4" height="172" fill="#3b82f6" rx="2"/>

  <!-- 조직명 -->
  <text
    x="72"
    y="120"
    fill="#171717"
    font-size="52"
    font-weight="700"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="start"
    opacity="1"
    dominant-baseline="auto"
  >BSSM OSS</text>

  <!-- 슬로건 line 1 -->
  <text
    x="72"
    y="164"
    fill="#52525b"
    font-size="22"
    font-weight="400"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="start"
    opacity="1"
    dominant-baseline="auto"
  >Busan Software Meister Highschool</text>

  <!-- 슬로건 line 2 -->
  <text
    x="72"
    y="194"
    fill="#52525b"
    font-size="22"
    font-weight="400"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="start"
    opacity="1"
    dominant-baseline="auto"
  >Open Source Organization</text>

  <!-- 구분선 -->
  <line x1="72" y1="216" x2="480" y2="216" stroke="#e4e4e7" stroke-width="1"/>

  <!-- 통계 -->
  <text
    x="72"
    y="248"
    fill="#71717a"
    font-size="18"
    font-weight="400"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="start"
    opacity="1"
    dominant-baseline="auto"
  >42 repos · 15 members · 1234 stars</text>

  <!-- 우측 장식 원 (배경) -->
  <circle cx="1080" cy="150" r="140" fill="#f4f4f5" opacity="0.6"/>
  <circle cx="1080" cy="150" r="100" fill="#e4e4e7" opacity="0.5"/>
  <circle cx="1080" cy="150" r="60" fill="#3b82f6" opacity="0.12"/>

  <!-- 우측 텍스트 -->
  <text
    x="1080"
    y="138"
    fill="#3b82f6"
    font-size="36"
    font-weight="700"
    font-family="&quot;SF Mono&quot;, &quot;JetBrains Mono&quot;, monospace"
    text-anchor="middle"
    opacity="0.6"
    dominant-baseline="auto"
  >{ }</text>
</svg>"
`;

exports[`renderBanner() > 스냅샷과 일치한다 1`] = `
"<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
  width="1200"
  height="300"
  viewBox="0 0 1200 300"
  
>
<rect x="0" y="0" width="1200" height="300" fill="#0a0a0a" rx="0" opacity="1" />

  <!-- 왼쪽 accent bar -->
  <rect x="48" y="64" width="4" height="172" fill="#3b82f6" rx="2"/>

  <!-- 조직명 -->
  <text
    x="72"
    y="120"
    fill="#ededed"
    font-size="52"
    font-weight="700"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="start"
    opacity="1"
    dominant-baseline="auto"
  >BSSM OSS</text>

  <!-- 슬로건 line 1 -->
  <text
    x="72"
    y="164"
    fill="#a1a1aa"
    font-size="22"
    font-weight="400"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="start"
    opacity="1"
    dominant-baseline="auto"
  >Busan Software Meister Highschool</text>

  <!-- 슬로건 line 2 -->
  <text
    x="72"
    y="194"
    fill="#a1a1aa"
    font-size="22"
    font-weight="400"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="start"
    opacity="1"
    dominant-baseline="auto"
  >Open Source Organization</text>

  <!-- 구분선 -->
  <line x1="72" y1="216" x2="480" y2="216" stroke="#262626" stroke-width="1"/>

  <!-- 통계 -->
  <text
    x="72"
    y="248"
    fill="#52525b"
    font-size="18"
    font-weight="400"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="start"
    opacity="1"
    dominant-baseline="auto"
  >42 repos · 15 members · 1234 stars</text>

  <!-- 우측 장식 원 (배경) -->
  <circle cx="1080" cy="150" r="140" fill="#171717" opacity="0.6"/>
  <circle cx="1080" cy="150" r="100" fill="#262626" opacity="0.5"/>
  <circle cx="1080" cy="150" r="60" fill="#3b82f6" opacity="0.12"/>

  <!-- 우측 텍스트 -->
  <text
    x="1080"
    y="138"
    fill="#3b82f6"
    font-size="36"
    font-weight="700"
    font-family="&quot;SF Mono&quot;, &quot;JetBrains Mono&quot;, monospace"
    text-anchor="middle"
    opacity="0.6"
    dominant-baseline="auto"
  >{ }</text>
</svg>"
`;

exports[`renderCategory() > 스냅샷과 일치한다 1`] = `
"<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
  width="800"
  height="192"
  viewBox="0 0 800 192"
  
>
<rect x="0" y="0" width="800" height="192" fill="#0a0a0a" rx="12" opacity="1" />
  
    <!-- repo row 0: CodeAgora -->
    <rect x="24" y="18" width="752" height="76" fill="#171717" rx="8" opacity="1" />

    <!-- lang dot -->
    <circle cx="44" cy="50" r="6" fill="#3178c6"/>

    <!-- repo name -->
    <text
    x="60"
    y="44"
    fill="#ededed"
    font-size="15"
    font-weight="600"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="start"
    opacity="1"
    dominant-baseline="auto"
  >CodeAgora</text>

    <!-- lang label -->
    <text
    x="60"
    y="64"
    fill="#3178c6"
    font-size="11"
    font-weight="400"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="start"
    opacity="1"
    dominant-baseline="auto"
  >TypeScript</text>

    <!-- description -->
    <text
    x="60"
    y="80"
    fill="#a1a1aa"
    font-size="12"
    font-weight="400"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="start"
    opacity="1"
    dominant-baseline="auto"
  >A collaborative coding platform for teams</text>

    <!-- stars -->
    
    <text x="760" y="56" font-size="12" fill="#52525b" text-anchor="end" dominant-baseline="middle" font-family=""SF Pro Display", "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif">⭐ 88</text>
    

    <!-- separator -->
    <line x1="36" y1="95" x2="764" y2="95" stroke="#262626" stroke-width="1"/>
    <!-- repo row 1: cotor -->
    <rect x="24" y="98" width="752" height="76" fill="#171717" rx="8" opacity="1" />

    <!-- lang dot -->
    <circle cx="44" cy="130" r="6" fill="#00add8"/>

    <!-- repo name -->
    <text
    x="60"
    y="124"
    fill="#ededed"
    font-size="15"
    font-weight="600"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="start"
    opacity="1"
    dominant-baseline="auto"
  >cotor</text>

    <!-- lang label -->
    <text
    x="60"
    y="144"
    fill="#00add8"
    font-size="11"
    font-weight="400"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="start"
    opacity="1"
    dominant-baseline="auto"
  >Go</text>

    <!-- description -->
    <text
    x="60"
    y="160"
    fill="#a1a1aa"
    font-size="12"
    font-weight="400"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="start"
    opacity="1"
    dominant-baseline="auto"
  >AI-powered commit tool</text>

    <!-- stars -->
    
    <text x="760" y="136" font-size="12" fill="#52525b" text-anchor="end" dominant-baseline="middle" font-family=""SF Pro Display", "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif">⭐ 25</text>
    

    <!-- separator -->
</svg>"
`;

exports[`renderMembers() > 스냅샷과 일치한다 1`] = `
"<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
  width="440"
  height="180"
  viewBox="0 0 440 180"
  
>
<rect x="0" y="0" width="440" height="180" fill="#0a0a0a" rx="12" opacity="1" />
  
    <a href="https://github.com/alice" target="_blank">
      
  <defs>
    <clipPath id="av0">
      <circle cx="100" cy="80" r="32"/>
    </clipPath>
  </defs>
  <image href="https://avatars.githubusercontent.com/u/1?v=4" x="68" y="48" width="64" height="64" clip-path="url(#av0)" preserveAspectRatio="xMidYMid slice"/>
      <text
    x="100"
    y="130"
    fill="#ededed"
    font-size="12"
    font-weight="500"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="middle"
    opacity="1"
    dominant-baseline="auto"
  >alice</text>
      <text
    x="100"
    y="144"
    fill="#52525b"
    font-size="10"
    font-weight="400"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="middle"
    opacity="1"
    dominant-baseline="auto"
  >5 repos</text>
    </a>
    <a href="https://github.com/bob" target="_blank">
      
  <defs>
    <clipPath id="av1">
      <circle cx="220" cy="80" r="32"/>
    </clipPath>
  </defs>
  <image href="https://avatars.githubusercontent.com/u/2?v=4" x="188" y="48" width="64" height="64" clip-path="url(#av1)" preserveAspectRatio="xMidYMid slice"/>
      <text
    x="220"
    y="130"
    fill="#ededed"
    font-size="12"
    font-weight="500"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="middle"
    opacity="1"
    dominant-baseline="auto"
  >bob</text>
      <text
    x="220"
    y="144"
    fill="#52525b"
    font-size="10"
    font-weight="400"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="middle"
    opacity="1"
    dominant-baseline="auto"
  >3 repos</text>
    </a>
    <a href="https://github.com/charlie" target="_blank">
      
  <defs>
    <clipPath id="av2">
      <circle cx="340" cy="80" r="32"/>
    </clipPath>
  </defs>
  <image href="https://avatars.githubusercontent.com/u/3?v=4" x="308" y="48" width="64" height="64" clip-path="url(#av2)" preserveAspectRatio="xMidYMid slice"/>
      <text
    x="340"
    y="130"
    fill="#ededed"
    font-size="12"
    font-weight="500"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="middle"
    opacity="1"
    dominant-baseline="auto"
  >charlie</text>
      
    </a>
</svg>"
`;

exports[`renderProject() > compact 모드 스냅샷과 일치한다 1`] = `
"<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
  width="400"
  height="80"
  viewBox="0 0 400 80"
  
>
<rect x="0" y="0" width="400" height="80" fill="#171717" rx="10" opacity="1" />
    <rect x="0" y="0" width="400" height="80" fill="#0a0a0a" rx="10" opacity="1" stroke="#262626" stroke-width="1"/>

    <circle cx="20" cy="40" r="6" fill="#3178c6"/>

    <text
    x="36"
    y="34"
    fill="#ededed"
    font-size="14"
    font-weight="600"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="start"
    opacity="1"
    dominant-baseline="auto"
  >CodeAgora</text>
    <text
    x="36"
    y="52"
    fill="#3178c6"
    font-size="11"
    font-weight="400"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="start"
    opacity="1"
    dominant-baseline="auto"
  >TypeScript</text>

    <text
    x="384"
    y="38"
    fill="#52525b"
    font-size="12"
    font-weight="400"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="end"
    opacity="1"
    dominant-baseline="auto"
  >⭐ 88</text>
</svg>"
`;

exports[`renderProject() > 기본 모드 스냅샷과 일치한다 1`] = `
"<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
  width="400"
  height="160"
  viewBox="0 0 400 160"
  
>
<rect x="0" y="0" width="400" height="160" fill="#0a0a0a" rx="10" opacity="1" />
    <rect x="0" y="0" width="400" height="160" fill="#0a0a0a" rx="10" opacity="1" stroke="#262626" stroke-width="1"/>

    <!-- header -->
    <circle cx="20" cy="32" r="6" fill="#3178c6"/>
    <text
    x="36"
    y="36"
    fill="#ededed"
    font-size="16"
    font-weight="700"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="start"
    opacity="1"
    dominant-baseline="auto"
  >CodeAgora</text>

    <text
    x="384"
    y="36"
    fill="#52525b"
    font-size="13"
    font-weight="400"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="end"
    opacity="1"
    dominant-baseline="auto"
  >⭐ 88</text>

    <!-- divider -->
    <line x1="16" y1="52" x2="384" y2="52" stroke="#262626" stroke-width="1"/>

    <!-- description -->
    <text
    x="20"
    y="76"
    fill="#a1a1aa"
    font-size="13"
    font-weight="400"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="start"
    opacity="1"
    dominant-baseline="auto"
  >A collaborative coding platform for teams</text>

    <!-- lang + updated -->
    <circle cx="20" cy="136" r="6" fill="#3178c6"/>
    <text
    x="36"
    y="140"
    fill="#3178c6"
    font-size="11"
    font-weight="400"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="start"
    opacity="1"
    dominant-baseline="auto"
  >TypeScript</text>
    <text
    x="384"
    y="140"
    fill="#52525b"
    font-size="11"
    font-weight="400"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="end"
    opacity="1"
    dominant-baseline="auto"
  >Updated 2h ago</text>
</svg>"
`;

exports[`renderStats() > 스냅샷과 일치한다 1`] = `
"<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
  width="800"
  height="160"
  viewBox="0 0 800 160"
  
>
<rect x="0" y="0" width="800" height="160" fill="#0a0a0a" rx="12" opacity="1" />
  <rect x="1" y="1" width="798" height="158" fill="#171717" rx="12" opacity="1" stroke="#262626" stroke-width="1"/>
  
    <!-- card 0 -->
    <rect x="1" y="0" width="198" height="160" fill="#171717" rx="12" opacity="1" />
    
    <text
    x="100"
    y="72"
    fill="#ededed"
    font-size="36"
    font-weight="700"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="middle"
    opacity="1"
    dominant-baseline="auto"
  >42</text>
    <text
    x="100"
    y="108"
    fill="#a1a1aa"
    font-size="14"
    font-weight="400"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="middle"
    opacity="1"
    dominant-baseline="auto"
  >Repos</text>
    <!-- card 1 -->
    <rect x="201" y="0" width="198" height="160" fill="#171717" rx="0" opacity="1" />
    <line x1="200" y1="20" x2="200" y2="140" stroke="#262626" stroke-width="1"/>
    <text
    x="300"
    y="72"
    fill="#ededed"
    font-size="36"
    font-weight="700"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="middle"
    opacity="1"
    dominant-baseline="auto"
  >15</text>
    <text
    x="300"
    y="108"
    fill="#a1a1aa"
    font-size="14"
    font-weight="400"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="middle"
    opacity="1"
    dominant-baseline="auto"
  >Members</text>
    <!-- card 2 -->
    <rect x="401" y="0" width="198" height="160" fill="#171717" rx="0" opacity="1" />
    <line x1="400" y1="20" x2="400" y2="140" stroke="#262626" stroke-width="1"/>
    <text
    x="500"
    y="72"
    fill="#ededed"
    font-size="36"
    font-weight="700"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="middle"
    opacity="1"
    dominant-baseline="auto"
  >1234</text>
    <text
    x="500"
    y="108"
    fill="#a1a1aa"
    font-size="14"
    font-weight="400"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="middle"
    opacity="1"
    dominant-baseline="auto"
  >Stars</text>
    <!-- card 3 -->
    <rect x="601" y="0" width="198" height="160" fill="#171717" rx="12" opacity="1" />
    <line x1="600" y1="20" x2="600" y2="140" stroke="#262626" stroke-width="1"/>
    <text
    x="700"
    y="72"
    fill="#ededed"
    font-size="36"
    font-weight="700"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="middle"
    opacity="1"
    dominant-baseline="auto"
  >—</text>
    <text
    x="700"
    y="108"
    fill="#a1a1aa"
    font-size="14"
    font-weight="400"
    font-family="&quot;SF Pro Display&quot;, &quot;Inter&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif"
    text-anchor="middle"
    opacity="1"
    dominant-baseline="auto"
  >Commits (soon)</text>
</svg>"
`;
